plugins {
    id "java"
    id "eclipse"
    id "io.freefair.lombok" version "6.4.1"
    id("io.hkhc.jarbird") version "0.7.0"        
}

repositories {
    mavenLocal()
    mavenCentral()
    jcenter()
}

jarbird {
    mavenCentral()
    pub {}
}

sourceCompatibility = 1.8

dependencies {
	compileOnly 'com.github.hbci4j:hbci4j-core:3.1.58'
	
    testImplementation 'junit:junit:4.12'
    testImplementation 'com.github.hbci4j:hbci4j-core:3.1.58'
}

